# mimic-generator

./: CMakeLists.txt  README.md  b.ips  basicClient
include/: connections.h  eventHandler.h  eventQueue.h  fileWorker.h  mimic.h  performanceTests.h  pollHandler.h  recvWorker.h  sendWorker.h  serverWorker.h
src/: basicClient.cpp  connections.cpp  event.cpp  eventHandler-old.cpp  eventHandler.cpp  eventQueue.cpp  eventTest.cpp  fileWorker.cpp  performanceTests.cpp  pollHandler.cpp  serverWorker.cpp  test.cpp
