cmake_minimum_required (VERSION 2.6)
project (mimic)
file (GLOB SOURCES "src/*.cpp")
include_directories(include)
add_executable(mimic ${SOURCES})
set (TestProj_VERSION_MAJOR 1)
set (TestProj_VERSION_MINOR 0)
set (CMAKE_C_COMPILER clang++)
set (CMAKE_CXX_FLAGS "-Wall -g -DASIO_STANDALONE --std=gnu++2a --stdlib=libc++")
